--- a/package.json
+++ b/package.json
@@ -21,17 +21,28 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.3",
+    "@ionic-native/geofence": "^4.3.3",
+    "@ionic-native/geolocation": "^4.3.3",
+    "@ionic-native/local-notifications": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
+    "@types/leaflet": "^1.2.1",
     "cordova-android": "6.3.0",
+    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-geofence": "^0.7.0",
+    "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notifications": "^1.0.0",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "es6-promise-plugin": "^4.1.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "leaflet": "^1.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -47,7 +58,11 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-geofence": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      }
     },
     "platforms": [
       "android"
